fixing logo overlap issue

--- a/sphinx_book_theme/static/sphinx-book-theme.scss
+++ b/sphinx_book_theme/static/sphinx-book-theme.scss
@@ -632,6 +632,7 @@ div.navbar-brand-box {
 
     a.navbar-brand {
         width: 100%;
+        height: auto;
 
         img {
             max-height: 100px !important;
